Revert "Fix filter bar z-index so it renders above table header"
This reverts commit 1906759ab6332ffee41fb9fcebb3ac6840d7507b.

--- a/css/table-view.css
+++ b/css/table-view.css
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
   position: sticky;
   top: 0;
-  z-index: 25;
+  z-index: 10;
 }
 
 .table-global-filter {
